tests/error/unrecognized_expression.ca.output
[tests/error/unrecognized_expression.ca:3] 
 Error: Syntax error: Expected identifier after def, found: 1
